--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -62,7 +62,7 @@
                         <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">@Localizer["Home"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("History", ViewContext.GetLang())">@Localizer["History"]</a>
                     </li>
                 </ul>
                 <hr />
