--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml.css
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml.css
@@ -34,3 +34,8 @@ button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
 }
+
+main {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
